syntax = "proto3";

package com.benchmark.model;

option java_package = "com.benchmark.model";
option java_outer_classname = "TestMessageProto";

message TestMessage {
  int32 int_0 = 1;
  int32 int_1 = 2;
  int32 int_2 = 3;
  int32 int_3 = 4;
  int32 int_4 = 5;
  int32 int_5 = 6;
  int32 int_6 = 7;
  int32 int_7 = 8;
  int32 int_8 = 9;
  int32 int_9 = 10;
  int32 int_10 = 11;
  int32 int_11 = 12;
  int32 int_12 = 13;
  int32 int_13 = 14;
  int32 int_14 = 15;
  int32 int_15 = 16;
  int32 int_16 = 17;
  int32 int_17 = 18;
  int32 int_18 = 19;
  int32 int_19 = 20;
  int32 int_20 = 21;
  int32 int_21 = 22;
  int32 int_22 = 23;
  int32 int_23 = 24;
  int32 int_24 = 25;
  int32 int_25 = 26;
  int32 int_26 = 27;
  int32 int_27 = 28;
  int32 int_28 = 29;
  int32 int_29 = 30;
  int32 int_30 = 31;
  int32 int_31 = 32;
  int32 int_32 = 33;
  int32 int_33 = 34;
  int32 int_34 = 35;
  int32 int_35 = 36;
  int32 int_36 = 37;
  int32 int_37 = 38;
  int32 int_38 = 39;
  int32 int_39 = 40;
  int32 int_40 = 41;
  int32 int_41 = 42;
  int32 int_42 = 43;
  int32 int_43 = 44;
  int32 int_44 = 45;
  int32 int_45 = 46;
  int32 int_46 = 47;
  int32 int_47 = 48;
  int32 int_48 = 49;
  int32 int_49 = 50;
  int32 int_50 = 51;
  int32 int_51 = 52;
  int32 int_52 = 53;
  int32 int_53 = 54;
  int32 int_54 = 55;
  int32 int_55 = 56;
  int32 int_56 = 57;
  int32 int_57 = 58;
  int32 int_58 = 59;
  int32 int_59 = 60;
  int32 int_60 = 61;
  int32 int_61 = 62;
  int32 int_62 = 63;
  int32 int_63 = 64;
  int32 int_64 = 65;
  int32 int_65 = 66;
  int32 int_66 = 67;
  int32 int_67 = 68;
  int32 int_68 = 69;
  int32 int_69 = 70;
  int32 int_70 = 71;
  int32 int_71 = 72;
  int32 int_72 = 73;
  int32 int_73 = 74;
  int32 int_74 = 75;
  int32 int_75 = 76;
  int32 int_76 = 77;
  int32 int_77 = 78;
  int32 int_78 = 79;
  int32 int_79 = 80;
  int32 int_80 = 81;
  int32 int_81 = 82;
  int32 int_82 = 83;
  int32 int_83 = 84;
  int64 long_0 = 85;
  int64 long_1 = 86;
  int64 long_2 = 87;
  int64 long_3 = 88;
  int64 long_4 = 89;
  int64 long_5 = 90;
  int64 long_6 = 91;
  int64 long_7 = 92;
  int64 long_8 = 93;
  int64 long_9 = 94;
  int64 long_10 = 95;
  int64 long_11 = 96;
  int64 long_12 = 97;
  int64 long_13 = 98;
  int64 long_14 = 99;
  int64 long_15 = 100;
  int64 long_16 = 101;
  int64 long_17 = 102;
  int64 long_18 = 103;
  int64 long_19 = 104;
  int64 long_20 = 105;
  int64 long_21 = 106;
  int64 long_22 = 107;
  int64 long_23 = 108;
  int64 long_24 = 109;
  int64 long_25 = 110;
  int64 long_26 = 111;
  int64 long_27 = 112;
  int64 long_28 = 113;
  int64 long_29 = 114;
  int64 long_30 = 115;
  int64 long_31 = 116;
  int64 long_32 = 117;
  int64 long_33 = 118;
  int64 long_34 = 119;
  int64 long_35 = 120;
  int64 long_36 = 121;
  int64 long_37 = 122;
  int64 long_38 = 123;
  int64 long_39 = 124;
  int64 long_40 = 125;
  int64 long_41 = 126;
  int64 long_42 = 127;
  int64 long_43 = 128;
  int64 long_44 = 129;
  int64 long_45 = 130;
  int64 long_46 = 131;
  int64 long_47 = 132;
  int64 long_48 = 133;
  int64 long_49 = 134;
  int64 long_50 = 135;
  int64 long_51 = 136;
  int64 long_52 = 137;
  int64 long_53 = 138;
  int64 long_54 = 139;
  int64 long_55 = 140;
  int64 long_56 = 141;
  int64 long_57 = 142;
  int64 long_58 = 143;
  int64 long_59 = 144;
  int64 long_60 = 145;
  int64 long_61 = 146;
  int64 long_62 = 147;
  int64 long_63 = 148;
  int64 long_64 = 149;
  int64 long_65 = 150;
  int64 long_66 = 151;
  int64 long_67 = 152;
  int64 long_68 = 153;
  int64 long_69 = 154;
  int64 long_70 = 155;
  int64 long_71 = 156;
  int64 long_72 = 157;
  int64 long_73 = 158;
  int64 long_74 = 159;
  int64 long_75 = 160;
  int64 long_76 = 161;
  int64 long_77 = 162;
  int64 long_78 = 163;
  int64 long_79 = 164;
  int64 long_80 = 165;
  int64 long_81 = 166;
  int64 long_82 = 167;
  string str_0 = 168;
  string str_1 = 169;
  string str_2 = 170;
  string str_3 = 171;
  string str_4 = 172;
  string str_5 = 173;
  string str_6 = 174;
  string str_7 = 175;
  string str_8 = 176;
  string str_9 = 177;
  string str_10 = 178;
  string str_11 = 179;
  string str_12 = 180;
  string str_13 = 181;
  string str_14 = 182;
  string str_15 = 183;
  string str_16 = 184;
  string str_17 = 185;
  string str_18 = 186;
  string str_19 = 187;
  string str_20 = 188;
  string str_21 = 189;
  string str_22 = 190;
  string str_23 = 191;
  string str_24 = 192;
  string str_25 = 193;
  string str_26 = 194;
  string str_27 = 195;
  string str_28 = 196;
  string str_29 = 197;
  string str_30 = 198;
  string str_31 = 199;
  string str_32 = 200;
  string str_33 = 201;
  string str_34 = 202;
  string str_35 = 203;
  string str_36 = 204;
  string str_37 = 205;
  string str_38 = 206;
  string str_39 = 207;
  string str_40 = 208;
  string str_41 = 209;
  string str_42 = 210;
  string str_43 = 211;
  string str_44 = 212;
  string str_45 = 213;
  string str_46 = 214;
  string str_47 = 215;
  string str_48 = 216;
  string str_49 = 217;
  string str_50 = 218;
  string str_51 = 219;
  string str_52 = 220;
  string str_53 = 221;
  string str_54 = 222;
  string str_55 = 223;
  string str_56 = 224;
  string str_57 = 225;
  string str_58 = 226;
  string str_59 = 227;
  string str_60 = 228;
  string str_61 = 229;
  string str_62 = 230;
  string str_63 = 231;
  string str_64 = 232;
  string str_65 = 233;
  string str_66 = 234;
  string str_67 = 235;
  string str_68 = 236;
  string str_69 = 237;
  string str_70 = 238;
  string str_71 = 239;
  string str_72 = 240;
  string str_73 = 241;
  string str_74 = 242;
  string str_75 = 243;
  string str_76 = 244;
  string str_77 = 245;
  string str_78 = 246;
  string str_79 = 247;
  string str_80 = 248;
  string str_81 = 249;
  string str_82 = 250;
}
